Fix recording duration truncation and add WhisperX/Ollama reachability handling
- WebmRemuxer: raw-concatenate all MediaRecorder webm chunks (only the
  first has an EBML header, later ones are headerless continuations)
  and remux once with ffmpeg, instead of using the -f concat demuxer
  which silently succeeded while only keeping the first ~9s chunk.
  Added extractFromOffset() to trim just the new delta for incremental
  transcription.
- RecordingProcessingService/LiveRecordingBufferManager: transcribe
  once per flush from the full rebuilt audio + delta trim instead of
  per-chunk (which was broken by the same root cause), and correctly
  handle AsrUnavailableException by marking the recording AWAITING_ASR
  instead of losing data or leaving it stuck.
- Microphone recording stop() now saves an intermediate PROCESSING
  status (mirroring the existing Discord path) so the async
  transcription determines the real terminal status instead of
  unconditionally marking DONE before ASR has even run.
- WorldFactExtractionService/AdventureService: add retryFactGathering()
  for manually re-running fact extraction on a COMPLETED adventure
  regardless of current worldExtractionStatus (fixes "Waiting on
  facts" never resolving when Ollama was unreachable).
- New GET /api/status endpoint exposing WhisperX/Ollama reachability;
  new retry endpoints for transcription and fact gathering.
- Frontend: poll /api/status, show reachability warnings, and add
  "Retry Transcription" (recording-level, enabled only when WhisperX
  reachable and status AWAITING_ASR/FAILED) and "Retry fact collection"
  (adventure-level, enabled only when adventure is COMPLETED and
  Ollama reachable) buttons so the app never gets stuck when either
  dependency is down.

Co-authored-by: Copilot <223556219+Copilot@users.noreply.github.com>